# legisdataMXsil

./: .gitignore  Makefile  README.md  analysisdata.md  datos.md  delta1.md  pipeline.py  pyproject.toml  requirements.txt  scraper.py
etl/: __init__.py  clean.py  load.py  normalize.py  save.py  transform.py
