[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "legisdatamxsil"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.33.1",
    "beautifulsoup4>=4.14.3",
    "urllib3>=2.6.3",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
etl-all    = "pipeline:etl_all"
etl-one    = "pipeline:main"
scrape-all = "scraper:scrape_all"

[tool.setuptools.packages.find]
include = ["etl*"]

[tool.setuptools]
py-modules = ["pipeline", "scraper"]

